--- a/ohmylunchBack/package.json
+++ b/ohmylunchBack/package.json
@@ -11,13 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
-    "ohmylunchback": "file:"
+    "ohmylunchback": "file:",
+    "prop-types": "^15.8.1"
   },
   "description": ""
 }
